<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.wangsy.myapplication.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_view"
        android:singleLine="true"
        android:ellipsize="marquee"/>
    <EditText
        android:id="@+id/editTX_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入内容" />
    <Button
        android:id="@+id/btn_sendMessage"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/btn_sendMessage"
        android:background="@drawable/anniu"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
        android:id="@+id/editTX_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入手机号码"
        android:inputType="phone"/>
        <EditText
            android:id="@+id/editTX_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入密码"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/editTX_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入数字"
            android:inputType="number"/>
        <EditText
            android:id="@+id/editTX_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="男" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="女"/>
        </RadioGroup>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </DatePicker>
        <Button
            android:id="@+id/btm_subimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"/>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/t_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOn="ON"
        android:textOff="OFF"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:maxHeight="200dp"
        android:maxWidth="400dp"
        android:background="@drawable/anniu"
        android:src="@drawable/biaoqing"/>
</LinearLayout>
</ScrollView>